--- a/index.html
+++ b/index.html
@@ -54,26 +54,8 @@
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
-          <!-- <li class="drop-down"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li> -->
         </ul>
       </nav><!-- .main-nav -->
 
@@ -92,7 +74,7 @@
           you love.</p>
         <div>
           <a href="#about" class="btn-main scrollto">Get Started</a>
-          <a href="#services" class="btn-main scrollto">Our Services</a>
+          <a href="#portfolio" class="btn-main scrollto">Portfolio</a>
         </div>
       </div>
 
@@ -125,37 +107,20 @@
               ea commodo consequat.
             </p>
 
-
-
-
+            <!-- 
             <div class="icon-box wow fadeIn" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
               <h4 class="title"><a href="">Dolor Sitema</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat tarad limino ata</p>
-            </div>
+            </div> -->
 
           </div>
 
-          <div class="col-lg-6 background order-lg-2 order-1 wow fadeIn">
+          <div class="col-lg-6 background order-lg-2 order-1 wow fadeIn px-5">
             <img src="img/about-img.jpg" class="img-fluid" alt="">
           </div>
         </div>
-
-
-      </div>
-    </section><!-- #about -->
-
-    <!--==========================
-      Why Us Section
-    ============================-->
-    <section id="why-us" class="wow fadeIn">
-      <div class="container">
-        <header class="section-header">
-          <h3>Why choose us?</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
-        </header>
-
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
@@ -175,13 +140,16 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">18</span>
-            <p>Hard Workers</p>
+            <p>Engineers</p>
           </div>
 
         </div>
 
+
       </div>
-    </section>
+    </section><!-- #about -->
+
+
 
     <!--==========================
       Portfolio Section
