--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
   <!--==========================
   Header
   ============================-->
-  <header id="header" class="fixed-top">
+  <header id="header" class="">
     <div class="container">
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#header"><span>SC</span></a></h1>
+        <h1 class="text-light"><a href="#header"><span>SEED<span class="sp">CODE</span></span></a></h1>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
@@ -293,8 +293,6 @@
                   <h4>Rabeel Jawaid</h4>
                   <span>Chief Executive Officer</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -310,8 +308,6 @@
                   <h4>Drew Stone</h4>
                   <span>CTO</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -327,8 +323,6 @@
                   <h4>Ahmad Jawaid</h4>
                   <span>COO</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -344,8 +338,6 @@
                   <h4>Zabi Mohebzada</h4>
                   <span>Marketing Head</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -437,17 +429,9 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>NewBiz</strong>. All Rights Reserved
+        &copy; Copyright <strong>SeedCode</strong>. All Rights Reserved
       </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=NewBiz
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+
     </div>
   </footer><!-- #footer -->
 
