--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <!--==========================
   Header
   ============================-->
-  <header id="header" class="">
-    <div class="container">
+  <header id="header" class="fixy">
+    <div class=" container">
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
@@ -283,7 +283,7 @@
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
 
-        <div class="row">
+        <div class="row px-5">
 
           <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
