--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
   <!--==========================
   Header
   ============================-->
-  <header id="header" class="fixy">
+  <header id="header" class="">
     <div class=" container">
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#header"><span>SEED<span class="sp">CODE</span></span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>SEED<span class="sp">CODE</span></span></a></h1>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
       </nav><!-- .main-nav -->
 
@@ -69,10 +69,12 @@
     <div class="container">
 
       <div class="intro-info">
-        <h2>Join the world’s largest startup community</h2>
-        <p>Experience the startup ecosystem — invest in startups, research the fastest-growing companies, and find a job
+        <h2 class="">Join the world’s largest startup community</h2>
+        <p class="">Experience the startup ecosystem — invest in startups, research the
+          fastest-growing
+          companies, and find a job
           you love.</p>
-        <div>
+        <div class="">
           <a href="#about" class="btn-main scrollto">Get Started</a>
           <a href="#portfolio" class="btn-main scrollto">Portfolio</a>
         </div>
@@ -91,6 +93,7 @@
 
         <header class="section-header">
           <h3>About Us</h3>
+
         </header>
 
         <div class="row about-container align-items-center">
@@ -173,7 +176,7 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -188,7 +191,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -203,7 +206,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -220,7 +223,7 @@
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -235,7 +238,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -252,7 +255,7 @@
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -302,7 +305,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/team-2.jpg" class="img-fluid" alt="">
+              <img src="img/team-2.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Drew Stone</h4>
@@ -317,7 +320,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/team-3.jpg" class="img-fluid" alt="">
+              <img src="img/team-3.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Ahmad Jawaid</h4>
@@ -332,7 +335,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/team-4.jpg" class="img-fluid" alt="">
+              <img src="img/team-4.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Zabi Mohebzada</h4>
