--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!--==========================
   Header
   ============================-->
-  <header id="header" class="">
+  <header id="header" class="fixy">
     <div class=" container">
 
       <div class="logo float-left">
@@ -53,8 +53,8 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="index.html#portfolio">Portfolio</a></li>
+          <li><a href="index.html#team">Team</a></li>
           <li><a href="careers.html">Careers</a></li>
         </ul>
       </nav><!-- .main-nav -->
