--- a/careers.html
+++ b/careers.html
@@ -36,7 +36,7 @@
     <!--==========================
   Header
   ============================-->
-    <header id="header" class="fixed-top">
+    <header id="header" class="fixy">
         <div class=" container">
 
             <div class="logo float-left">
@@ -58,7 +58,7 @@
 
     <section id="sub-intro" class="d-flex align-items-center">
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin-top: -100px;">
                 <div class="col-lg-7 order-2 order-lg-1  sub-intro-info">
                     <h2>SEED<span style="font-weight: 400">CODE Careers</h2>
                     <p>Experience the startup ecosystem — develop for the fastest-growing companies and find a
