--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>SeedCode</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="Software Development, Mobile, DevOps" name="keywords">
+  <meta content="Software Development, Mobile, DevOps" name="description">
 
   <!-- Favicons -->
   <!-- <link href="img/favicon.png" rel="icon"> -->
@@ -282,7 +282,7 @@
     <section id="team">
       <div class="container">
         <div class="section-header">
-          <h3>Team</h3>
+          <h3>Core Team</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
 
@@ -305,11 +305,11 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/team-2.jpeg" class="img-fluid" alt="">
+              <img src="img/team-4.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Drew Stone</h4>
-                  <span>CTO</span>
+                  <h4>Zabi Mohebzada</h4>
+                  <span>Head of Marketing</span>
                   <div class="social">
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
@@ -320,13 +320,14 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/team-3.jpeg" class="img-fluid" alt="">
+              <img src="img/team-2.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Ahmad Jawaid</h4>
-                  <span>COO</span>
+                  <h4>Drew Stone</h4>
+                  <span>CTO</span>
                   <div class="social">
                     <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-github"></i></a>
                   </div>
                 </div>
               </div>
@@ -335,13 +336,14 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/team-4.jpeg" class="img-fluid" alt="">
+              <img src="img/team-3.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Zabi Mohebzada</h4>
-                  <span>Marketing Head</span>
+                  <h4>Ahmad Jawaid</h4>
+                  <span>COO</span>
                   <div class="social">
                     <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-github"></i></a>
                   </div>
                 </div>
               </div>
