--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SeedCode</title>
+  <title>SeedCode - Software Development, Mobile, DevOps</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Software Development, Mobile, DevOps" name="keywords">
   <meta content="Software Development, Mobile, DevOps" name="description">
