--- a/index.html
+++ b/index.html
@@ -287,31 +287,31 @@
         </div>
 
         <div class="row px-5">
-
           <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
-              <img src="img/team-1.jpg" class="img-fluid" alt="">
+              <img src="img/team-2.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Rabeel Jawaid</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Drew Stone</h4>
+                  <span>CTO</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://github.com/drewstone/" target="_blank"><i class="fa fa-github"></i></a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.1s">
+          <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
-              <img src="img/team-4.jpeg" class="img-fluid" alt="">
+              <img src="img/team-1.jpg" class="img-fluid" alt="" data-wow-delay="0.1s">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Zabi Mohebzada</h4>
-                  <span>Head of Marketing</span>
+                  <h4>Rabeel Jawaid</h4>
+                  <span>Chief Executive Officer</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -320,35 +320,37 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/team-2.jpeg" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Drew Stone</h4>
-                  <span>CTO</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                    <a href=""><i class="fa fa-github"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
-            <div class="member">
               <img src="img/team-3.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Ahmad Jawaid</h4>
                   <span>COO</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                    <a href=""><i class="fa fa-github"></i></a>
+                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://github.com/Ahmadjawaid" target="_blank"><i class="fa fa-github"></i></a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
+
+          <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
+            <div class="member">
+              <img src="img/team-4.jpeg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Zabi Mohebzada</h4>
+                  <span>Head of Marketing</span>
+                  <div class="social">
+                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
         </div>
 
