--- a/index.html
+++ b/index.html
@@ -436,7 +436,10 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>SeedCode</strong>. All Rights Reserved
+        &copy; Copyright <strong>SeedCode</strong>. All Rights Reserved |
+        <a class="footer-a" href="index.html#portfolio">Portfolio</a>
+        <a class="footer-a" href="index.html#team">Team</a>
+        <a class="footer-a" href="careers.html">Careers</a>
       </div>
 
     </div>
