--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
                   <h4>Rabeel Jawaid</h4>
                   <span>Chief Executive Officer</span>
                   <div class="social">
-                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/rabeeljawaid/" target="_blank"><i
+                        class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -326,7 +327,8 @@
                   <h4>Ahmad Jawaid</h4>
                   <span>COO</span>
                   <div class="social">
-                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/ahmad-jawaid/" target="_blank"><i
+                        class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/Ahmadjawaid" target="_blank"><i class="fa fa-github"></i></a>
                   </div>
                 </div>
@@ -343,7 +345,8 @@
                   <h4>Zabi Mohebzada</h4>
                   <span>Head of Marketing</span>
                   <div class="social">
-                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/zabi-mohebzada-59008811b/" target="_blank"><i
+                        class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
