--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   <h4>Drew Stone</h4>
                   <span>CTO</span>
                   <div class="social">
-                    <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/drewstone/" target="_blank"><i class="fa fa-github"></i></a>
                   </div>
                 </div>
