nav padding finally fixed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           companies, and find a job
           you love.</p>
         <div class="">
-          <a href="#about" class="btn-main scrollto">Learn More</a>
+          <a href="mailto:rabeel@seedcode.io" class="btn-main scrollto">Get Started</a>
           <a href="#portfolio" class="btn-main scrollto">Portfolio</a>
         </div>
       </div>
